validar nil en vista para poder visualizarla

--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -59,8 +59,10 @@ Votación
 <select class="form-control search2" id="select_polling" name="polling_id"
   style="margin-bottom:10px;">
   <option value="-1"> </option>
-  <% @polling.each do |p| %>
-    <option value="<%= p.id %>"> <%= p.name %></option>
+  <% if !@polling.nil? %>
+    <% @polling.each do |p| %>
+      <option value="<%= p.id %>"> <%= p.name %></option>
+    <% end %>
   <% end %>
 </select>  
 <a href="#" class="btn btn-success btn-block" id="btn-enviar">Guardar</a>
@@ -205,7 +207,9 @@ Votación
         <tr>
           <td >
             <p class="small">
-              <%= link_to a.polling.name, detalle_path(:polling_id => a.id)%></p>
+              <% if !a.polling.nil? %>
+                <%= link_to a.polling.name, detalle_path(:polling_id => a.id)%></p>
+              <% end %>
           </td>
           <td >
         </td>
