--- a/app/views/pollings/detalle.html.erb
+++ b/app/views/pollings/detalle.html.erb
@@ -211,6 +211,38 @@
   </tbody>
   </table>
 </div>
+<div class="col-md-12 center">
+  <ul class="pagination">
+    <li class="page_number_detalle" data-num="0"><a>Primera</a></li>
+    <% pages = (User.all.count / User.per_page).round %>
+    <% page = 0 %>
+
+    <% page_prev = page.to_i - 1 %>
+    <li class="page_number_detalle" id="prev_page" data-num="<%= page_prev %>">
+      <a >Anterior</a>
+    </li>
+
+    <li class="page_number_detalle">
+      <a >Pagina Actual <strong id="current_page"><%= page %></strong></a>
+    </li>
+
+    <% page_next = page.to_i + 1 %>
+    <li class="page_number_detalle" id="next_page" data-num="<%= page_next %>">
+      <a  >Siguiente</a>
+    </li>
+
+    <li class="page_number_detalle" data-num="<%= pages -1 %>">
+      <a >Última</a>
+    </li>
+  </ul>
+  <p class="page_showing">
+    (
+    <strong id="total_result">
+      <%= User.all.count %> 
+    </strong>
+    en total)
+  </p>
+</div>  
 <div class="row"> 
   <div class="col-md-3 col-md-offset-5">Ya votaron: <span id="votos_span"></span></div>
 </div>
