lista nominal por correo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
+	<section class="content-header">
+	 			<%= flash_messages %>
+	 		</section>
   <div class="container">
 		<%= yield %>
 	</div>
