--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -287,6 +287,31 @@
 	        <% end %>
 	      </tbody>
 	  	</table>
+	  	<div class="col-md-12 center">
+		  <ul class="pagination">
+		    <li class="page_number_role" data-num="0"><a>Primera</a></li>
+		    <% pages = (User.all.count / User.per_page).round %>
+		    <% page = 0 %>
+
+		    <% page_prev = page.to_i - 1 %>
+		    <li class="page_number_role" id="prev_page" data-num="<%= page_prev %>">
+		      <a >Anterior</a>
+		    </li>
+
+		    <li class="page_number_role">
+		      <a >Pagina Actual <strong id="current_page"><%= page %></strong></a>
+		    </li>
+
+		    <% page_next = page.to_i + 1 %>
+		    <li class="page_number_role" id="next_page" data-num="<%= page_next %>">
+		      <a  >Siguiente</a>
+		    </li>
+
+		    <li class="page_number_role" data-num="<%= pages -1 %>">
+		      <a >Última</a>
+		    </li>
+		  </ul>
+		</div>  
   	<%end%>
 	</div>
 </div>
