--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,9 +32,9 @@
 <% end %>
 <div class="row">
   <% if !current_user.communication? %>
-  <div  class="col-sm-6">
+ <!-- <div  class="col-sm-6">
     <div class="panel panel-default">
-      <!-- Default panel contents -->
+      <!-- Default panel contents 
       <div class="panel-heading">
         Gráfica de Jugadores por Grupo
       </div>
@@ -42,8 +42,32 @@
         <div id="container4"></div>
       </div>
     </div>
+  </div> -->
+  <div  class="col-sm-6">
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">
+        Gráfica de Jugadores por Coordinadores
+      </div>
+      <div class="panel-body">
+        <div id="container_coord"></div>
+      </div>
+    </div>
+  </div>
+  <div  class="col-sm-6">
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">
+        Jugadores que ya votaron
+      </div>
+      <div class="panel-body">
+        <div id="container_votes"></div>
+      </div>
+    </div>
   </div>
   <% end %>
+</div>
+<div class="row">
   <div  class="col-sm-6">
     <div class="panel panel-default">
       <!-- Default panel contents -->
